Closed Bug 86505 Opened 24 years ago Closed 24 years ago

Bookmark & Sidebar customization in CCK Tool not picked up

Categories

(CCK Graveyard :: CCK-General, defect, P1)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: blee, Assigned: shrutiv)

References

Details

(Whiteboard: regression, nscckrtm -Need to review patch, r=tao)

Attachments

(2 files)

Designating customized Bookmark and Sidebar in CCK Tool doesn't do anything - not picked up in the final customized bld. It's built with default Bookmark and Sidebar. Observed in b1 cand. bld.
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: nscckrtm
*** Bug 86502 has been marked as a duplicate of this bug. ***
*** Bug 86506 has been marked as a duplicate of this bug. ***
The "Us" => "US" change seems obvious. I assume the directory name changed since 6.0x? For code the change in ib.cpp: - // decompress the XPI file - command = quotes +rootPath + "unzip.exe"+ quotes + "-o" + spaces + quotes + xpiArchive + quotes; + // decompressing the directory path within the XPI file + command = quotes +rootPath + "unzip.exe"+ quotes + "-o" + spaces + quotes + xpiArchive + quotes + spaces + quotes + xpifile + "/*.*" + quotes; Did this work for 6.0 CCK?
The above code change is for the section "addrdffile" in ib.cpp. So, it was working in CCK6.0
r=bobj
Checked in patch. Marking this fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reopening as a doc bug assigned to me Need to revise "Guide to Customization" to reflect that customizers need to use Notepad or other text editor, *NOT* Composer, in order to customize bookmarks.html. The bookmarks.html depends upon a special doctype that Composer and potentially other html editors modify.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reassinging to kristif for doc revision
Assignee: shrutiv → kristif
Status: REOPENED → NEW
Fixed in 6/25 bld.
Status: NEW → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Marking Verified
Status: RESOLVED → VERIFIED
Reopening as the problem came back (regressed) in 7/3 bld which contains the latest NS6.1 bits off the branch MOZILLA_0_9_2_BRANCH.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
assignee changed back to shrutiv
Assignee: kristif → shrutiv
Status: REOPENED → NEW
Whiteboard: nscckrtm → regression, nscckrtm
Status: NEW → ASSIGNED
Whiteboard: regression, nscckrtm → regression, nscckrtm -Need to review patch
Whiteboard: regression, nscckrtm -Need to review patch → regression, nscckrtm -Need to review patch, r=tao
Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Verified fixed in 7/19 bld.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: