Fix for bug 86505: Bookmark & Sidebar customization in CCK Tool not picked up r=bobj